HTML Validation Fixes
‣ Add lang attribute to html tag.
‣ Add invisible section heading for 'about-me.'
‣ Fix async attribute on script tags.

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -62,3 +62,7 @@ section {
 img {
   max-width: 100%;
 }
+
+.crawler {
+  display: none;
+}
